added books-cat section with generic text and style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
 
-  <!-- Intestazione -->
+  <!-- Intestazione con navbar -->
   <header class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -52,6 +52,202 @@
       </div>
     </nav>
   </header>
+
+  <main>
+
+    <!-- Sezione catalogo libri -->
+    <section id="books-cat" class="py-4">
+      <div class="container">        
+        <!-- riga di titolo e bottone "aggiungi libro" -->
+        <div class="title-and-btn d-flex justify-content-between align-items-center">
+          <h1 class="mb-0">Titolo</h1>
+          <div class="btn btn-primary">Aggiungi libro</div>
+        </div>
+        <!-- tabella con catalogo libri -->
+        <table class="table mt-4">
+          <!-- intestazioni tabella-->
+          <thead>
+            <tr>
+              <th>Titolo</th>
+              <th>Data prestito</th>
+              <th>Stato</th>
+              <th class="text-center">Azioni</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- riga tabella -->
+            <tr>
+              <td>I pilastri della terra</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>I promessi sposi</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Il signore degli anelli</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Harry Potter e la pietra filosofale</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Il codice da Vinci</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Shining</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>La Divina Commedia</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Il trono di spade</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Il mondo di Sofia</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>Il piccolo principe</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+            <!-- riga tabella -->
+            <tr>
+              <td>La storia infinita</td>
+              <td>data</td>
+              <td>stato del libro</td>
+              <td class="text-center">
+                <div class="btn btn-outline-secondary">
+                  <i class="bi bi-pencil-fill"></i>
+                </div>
+                <div class="btn btn-outline-secondary">
+                  <i class="fa-solid fa-trash"></i>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
 
 <!-- javascript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
