added style for book status

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             </tr>
           </thead>
           <tbody>
-            <!-- riga tabella -->
+            <!-- riga tabella 1 -->
             <tr>
               <td>I pilastri della terra</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -89,11 +89,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 2 -->
             <tr>
               <td>I promessi sposi</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -103,11 +103,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 3 -->
             <tr>
               <td>Il signore degli anelli</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-warning">In prestito</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -117,11 +117,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 4 -->
             <tr>
               <td>Harry Potter e la pietra filosofale</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -131,11 +131,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 5 -->
             <tr>
               <td>Il codice da Vinci</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-danger">Non disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -145,11 +145,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 6 -->
             <tr>
               <td>Shining</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -159,11 +159,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 7 -->
             <tr>
               <td>La Divina Commedia</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -173,11 +173,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 8 -->
             <tr>
               <td>Il trono di spade</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -187,11 +187,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 9 -->
             <tr>
               <td>Il mondo di Sofia</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -201,11 +201,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 10 -->
             <tr>
               <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -215,11 +215,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 11 -->
             <tr>
               <td>Il piccolo principe</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -229,11 +229,11 @@
                 </div>
               </td>
             </tr>
-            <!-- riga tabella -->
+            <!-- riga tabella 12 -->
             <tr>
               <td>La storia infinita</td>
               <td>data</td>
-              <td>stato del libro</td>
+              <td><span class="badge text-bg-success">Disponibile</span></td>
               <td class="text-center">
                 <div class="btn btn-outline-secondary">
                   <i class="bi bi-pencil-fill"></i>
@@ -245,6 +245,8 @@
             </tr>
           </tbody>
         </table>
+
+        <span class="badge badge-pill badge-success">Success</span>
       </div>
     </section>
   </main>
