--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 
   <main>
 
-    <!-- Sezione catalogo libri -->
     <div class="container">
       <div class="row row-cols-1">
-        <div class="col col-lg-9">          
-          <section id="books-cat" class="py-4">
+        <div class="col col-lg-9 mt-4">
+
+          <!-- Sezione catalogo libri -->
+          <section id="books-cat" class="">
             <!-- riga di titolo e bottone "aggiungi libro" -->
             <div class="title-and-btn d-flex justify-content-between align-items-center">
               <h1 class="mb-0">Titolo</h1>
@@ -248,20 +249,92 @@
               </tbody>
             </table>
           </section>
+
         </div>
-        <div class="col col-lg-3 pt-4">
+        <div class="col col-lg-3 mt-4">
+          
+          <!-- Sezione supporto per l'utente -->
           <section id="user-support">
-            <div class="card dashed-border-alternative" id="todo"></div>
-            <div class="card dashed-border-alternative" id="faq"></div>          
+            <!-- card con checkbox di promemoria -->
+            <div class="card border-2" id="todo"
+             class="p-2">
+              <h1 class="border-bottom border-2 px-3 py-2">Todo</h1>
+              <form action="" class="">
+                <div class="card m-3">
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                      <label for="ord-books" class="">
+                        <input type="checkbox" id="ord-books" value="ord-books" >
+                        Ordinare nuovi libri
+                      </label>
+                    </li>
+                    <li class="list-group-item">
+                      <label for="send-exp" class="">
+                        <input type="checkbox" id="send-exp" value="send-exp" >
+                        Mandare avvisi prestiti scaduti
+                      </label>      
+                    </li>
+                    <li class="list-group-item">
+                      <label for="call-of" class="">
+                        <input type="checkbox" id="call-of" value="call-of" >
+                        Chiamare segreteria
+                      </label>      
+                    </li>
+                  </ul>
+                </div>
+              </form>
+            </div>
+            <!-- card con checkbox FAQ -->
+            <div class="card mt-4 border-2" id="faq"
+             class="p-2">
+              <h1 class="border-bottom border-2 px-3 py-2">F.A.Q.</h1>
+              <div class="accordion m-3" id="accordion-faq">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Come aggiungere un nuovo libro?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, error ab cum vitae veniam blanditiis suscipit, repudiandae, maiores quam odio at quidem eius ducimus distinctio labore. Recusandae officia veniam suscipit.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
+
         </div>
       </div>        
     </div>
 
 
   </main>
-
-<!-- javascript -->
+  
+  <!-- javascript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
