corrected css for title in new-book

--- a/new-book.html
+++ b/new-book.html
@@ -57,7 +57,7 @@
   <form action="" id="book-reser">
     <div class="container">      
       
-      <h1 class="fs-3 py-3">Nuovo libro</h1>
+      <h1 class="fs-3 fw-semibold py-3">Nuovo libro</h1>
       <!-- Info libro -->
       <div id="info-libro" class="row gy-3">
         <div class="col-6">
