added link between pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
@@ -64,7 +64,9 @@
             <!-- riga di titolo e bottone "aggiungi libro" -->
             <div class="title-and-btn d-flex justify-content-between align-items-center">
               <h1 class="mb-0">Titolo</h1>
-              <div class="btn btn-primary">Aggiungi libro</div>
+              <a class="text-white text-decoration-none" href="new-book.html#book-reser">
+                <div class="btn btn-primary">Aggiungi libro</div>
+              </a>
             </div>
             <!-- tabella con catalogo libri -->
             <table class="table mt-4">
