--- a/new-book.html
+++ b/new-book.html
@@ -59,7 +59,7 @@
       
       <h1 class="fs-3 fw-semibold py-3">Nuovo libro</h1>
       <!-- Info libro -->
-      <div id="info-libro" class="row gy-3">
+      <div id="info-libro" class="row gy-3 mb-5">
         <div class="col-6">
           <!-- nome autore -->
           <div class="label">
@@ -85,7 +85,7 @@
             <span class="nota-form">Titolo versione italiana</span>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="label">
             <!-- genere -->
             <span class="d-inline-block mb-2">Cognome autore</span><br>
@@ -99,14 +99,14 @@
             </select>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="label">
             <!-- anno di pubblicazione -->
             <span class="d-inline-block mb-2">Anno di pubblicazione</span><br>
-            <input type="date" class="form-control" placeholder="Inserisci l'anno" aria-label="Last name">
+            <input type="year" class="form-control" placeholder="Inserisci l'anno" aria-label="Last name">
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-lg-4">
           <div class="label">
             <!-- numero isbn -->
             <span class="d-inline-block mb-2">ISBN</span><br>
@@ -114,11 +114,9 @@
           </div>
         </div>
       </div>
-      <!-- separazione grafica con linea orizzontale -->
-      <div class="separator-div"></div>
       <!-- box note -->
-      <div class="row">
-        <div class="col-12">
+      <div id="note-box" class="row">
+        <div class="col">
           <div class="label">
             <span class="d-inline-block mb-2">Note</span><br>
             <textarea name="note" id="note" class="form-control w-100"></textarea>
