--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <section id="books-cat" class="">
             <!-- riga di titolo e bottone "aggiungi libro" -->
             <div class="title-and-btn d-flex justify-content-between align-items-center">
-              <h1 class="mb-0">Titolo</h1>
+              <h1 class="mb-0">Catalogo libri</h1>
               <a class="text-white text-decoration-none" href="new-book.html#book-reser">
                 <div class="btn btn-primary">Aggiungi libro</div>
               </a>
@@ -85,7 +85,7 @@
                 <!-- riga tabella 1 -->
                 <tr>
                   <td>I pilastri della terra</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -99,7 +99,7 @@
                 <!-- riga tabella 2 -->
                 <tr>
                   <td>I promessi sposi</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -113,7 +113,7 @@
                 <!-- riga tabella 3 -->
                 <tr>
                   <td>Il signore degli anelli</td>
-                  <td>data</td>
+                  <td>18/10/2023</td>
                   <td><span class="badge text-bg-warning">In prestito</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -127,7 +127,7 @@
                 <!-- riga tabella 4 -->
                 <tr>
                   <td>Harry Potter e la pietra filosofale</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -141,7 +141,7 @@
                 <!-- riga tabella 5 -->
                 <tr>
                   <td>Il codice da Vinci</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-danger">Non disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -155,7 +155,7 @@
                 <!-- riga tabella 6 -->
                 <tr>
                   <td>Shining</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -169,8 +169,8 @@
                 <!-- riga tabella 7 -->
                 <tr>
                   <td>La Divina Commedia</td>
-                  <td>data</td>
-                  <td><span class="badge text-bg-success">Disponibile</span></td>
+                  <td>21/09/2023</td>
+                  <td><span class="badge text-bg-warning">In prestito</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
                       <i class="bi bi-pencil-fill"></i>
@@ -183,7 +183,7 @@
                 <!-- riga tabella 8 -->
                 <tr>
                   <td>Il trono di spade</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -197,8 +197,8 @@
                 <!-- riga tabella 9 -->
                 <tr>
                   <td>Il mondo di Sofia</td>
-                  <td>data</td>
-                  <td><span class="badge text-bg-success">Disponibile</span></td>
+                  <td>-</td>
+                  <td><span class="badge text-bg-danger">Non disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
                       <i class="bi bi-pencil-fill"></i>
@@ -211,8 +211,8 @@
                 <!-- riga tabella 10 -->
                 <tr>
                   <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
-                  <td>data</td>
-                  <td><span class="badge text-bg-success">Disponibile</span></td>
+                  <td>25/07/2023</td>
+                  <td><span class="badge text-bg-warning">in prestito</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
                       <i class="bi bi-pencil-fill"></i>
@@ -225,7 +225,7 @@
                 <!-- riga tabella 11 -->
                 <tr>
                   <td>Il piccolo principe</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -239,7 +239,7 @@
                 <!-- riga tabella 12 -->
                 <tr>
                   <td>La storia infinita</td>
-                  <td>data</td>
+                  <td>-</td>
                   <td><span class="badge text-bg-success">Disponibile</span></td>
                   <td class="text-center">
                     <div class="btn btn-outline-secondary">
@@ -308,22 +308,28 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
+                      Come posso accedere all'anagrafica utenti?
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id qui perferendis rem vitae dicta eos doloribus vel eum inventore, odit saepe iusto optio, architecto tempore ratione repellat. Dolorum, voluptates sit!
+                      Cupiditate, autem? Consectetur dolorum pariatur error eum ut eaque aliquam nemo saepe laborum possimus molestiae rem deserunt mollitia natus voluptatibus, incidunt atque debitis cumque vero fugiat, magni, dolore sapiente? Eius?
+                      Cumque quod molestiae molestias architecto! Eligendi, suscipit officiis. Vitae odit saepe repudiandae accusantium quia recusandae odio sequi sit eveniet quod, eum, voluptatibus iusto? Amet, voluptas omnis quia eveniet maiores accusamus!
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Accordion Item #3
+                      Posso usare questa dashboard da mobile?
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate fugit dolorum eius labore esse delectus aliquid consectetur debitis rem? Sapiente, voluptatem minima enim incidunt culpa dolore esse assumenda soluta nesciunt?
+                      Eum pariatur repellat maxime a excepturi praesentium laudantium! Iusto ab fugiat alias architecto odit saepe totam, dignissimos iure magnam sapiente dolor cupiditate, magni dolorem culpa vitae consequuntur facere repellat a!
+                      Expedita animi nulla sapiente consequatur officiis cum consectetur quos pariatur eum dolorem. Molestiae beatae optio reiciendis quae repellendus nisi, delectus eaque consectetur porro quia laudantium facere quam, vero illum eius.
                     </div>
                   </div>
                 </div>
