reviewed css table and accordion

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <main>
 
-    <div class="container">
+    <div class="container mb-5">
       <div class="row row-cols-1">
         <div class="col col-lg-9 mt-4">
 
@@ -71,7 +71,7 @@
               </a>
             </div>
             <!-- tabella con catalogo libri -->
-            <table class="table mt-4">
+            <table class="table mt-4 table-striped table-hover">
               <!-- intestazioni tabella-->
               <thead>
                 <tr>
@@ -292,7 +292,7 @@
             <div class="card mt-4 border-2" id="faq"
              class="p-2">
               <h1 class="border-bottom border-2 px-3 py-2">F.A.Q.</h1>
-              <div class="accordion m-3" id="accordion-faq">
+              <div class="accordion accordion-flush p-3" id="accordion-faq">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
