reviewed input in new-book.html

--- a/new-book.html
+++ b/new-book.html
@@ -105,7 +105,7 @@
           <div class="label">
             <!-- anno di pubblicazione -->
             <span class="d-inline-block mb-2">Anno di pubblicazione</span><br>
-            <input type="year" class="form-control" placeholder="Inserisci l'anno" aria-label="Last name">
+            <input type="number" min="1800"  value="2024" class="form-control" placeholder="Inserisci l'anno" aria-label="Last name">
           </div>
         </div>
         <div class="col-lg-4">
